...
                android:textSize="18sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailContent"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textSize="18sp" />

            <TextView
...
                android:gravity="center_vertical"
                android:text="@string/nothing_here_yet"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/addressContent"
                android:layout_width="350dp"
                android:layout_height="56dp"
                android:layout_below="@id/address"
                android:gravity="center_vertical"
                android:text="@string/nothing_here_yet"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/changePassword"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_below="@id/addressContent"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusable="true"
...
                android:background="@color/primaryRed"
                android:text="@string/favorite"
                android:textColor="@color/white"
                app:backgroundTint="@color/design_default_color_error" />

            <Button
                android:id="@+id/viewOrders"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="13dp"
...
