<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_error"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center_vertical"
            android:text="@string/old_password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/oldPass"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_below="@id/password"
            android:ems="10"
            android:hint="@string/enter_old_password"
            android:autofillHints=""
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/oldPass"
            android:layout_marginTop="30dp"
            android:gravity="fill_vertical"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/newPass"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_below="@id/newPassword"
            android:ems="10"
            android:hint="@string/enter_new_password"
            android:autofillHints=""
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_below="@id/newPass"
            android:ems="10"
            android:hint="@string/confirm_new_password"
            android:autofillHints=""
            android:inputType="textPassword" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="235dp"
            android:layout_marginLeft="235dp"
            android:layout_marginTop="550dp"
            android:background="@color/design_default_color_error"
            android:onClick="onClick"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@color/design_default_color_error" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="550dp"
            android:background="@color/design_default_color_error"
            android:onClick="onClick"
            android:text="@string/go_back"
            android:textColor="@color/white"
            app:backgroundTint="@color/design_default_color_error" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>