...
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_below="@id/email"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_new_email"
...
            android:gravity="center_vertical"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/newAddr"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_below="@id/address"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_new_addr"
...
